Fix scrollbar in firefox

--- a/frontend/src/components/page/page.module.scss
+++ b/frontend/src/components/page/page.module.scss
@@ -11,6 +11,7 @@
     > * {
         overflow-y: auto;
         overscroll-behavior-y: contain;
+        scrollbar-width: none;
     }
 
     div:empty + .separator {
